--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-08-05 13:37+0100\n"
+"POT-Creation-Date: 2017-08-05 14:04+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -313,16 +313,56 @@ msgid ""
 "by you or your team when processing the VPs images."
 msgstr ""
 
-#: mymwebsite/templates/download.html:10
-msgid "MyMensor Mobile App"
+#: mymwebsite/templates/download.html:4 mymwebsite/templates/index.html:42
+#: mymwebsite/templates/index.html:89 mymwebsite/templates/innerbase.html:70
+msgid "Download"
 msgstr ""
 
-#: mymwebsite/templates/download.html:16 mymwebsite/templates/download.html:49
+#: mymwebsite/templates/download.html:7
+msgid "Mobile Apps Download"
+msgstr ""
+
+#: mymwebsite/templates/download.html:9
+msgid ""
+"You can use any of the following mobile apps to send media to the MyMensor\n"
+"        Server. In fact you can even have BOTH installed at the same time in "
+"your mobile using the SAME MyMensor account\n"
+"        and use them according to your specific use case."
+msgstr ""
+
+#: mymwebsite/templates/download.html:14
+msgid "MyMensorAR Mobile App"
+msgstr ""
+
+#: mymwebsite/templates/download.html:16
+msgid ""
+"This app uses Augmented Reality (AR) to automatically find and archive your\n"
+"        media in the pre-configured folders. But this automation (as you may "
+"expect) comes with a price! You will need\n"
+"        to configure the folders accordingly and setup files will be loaded "
+"always when you start up the app. This means\n"
+"        that if you are in an area where internet access is problematic app "
+"startup may be tedious, for this there is a\n"
+"        different flavor of our app."
+msgstr ""
+
+#: mymwebsite/templates/download.html:25 mymwebsite/templates/download.html:64
 msgid "Android App"
 msgstr ""
 
-#: mymwebsite/templates/download.html:43
-msgid "MyMensorAR Mobile App"
+#: mymwebsite/templates/download.html:54
+msgid "MyMensor Mobile App"
+msgstr ""
+
+#: mymwebsite/templates/download.html:56
+msgid ""
+"This app DOES NOT use Augmented Reality (AR) in media capture thus it "
+"cannot\n"
+"        automatically capture media nor archive it without user interaction. "
+"As there is no AR there is no need for\n"
+"        configuration, also! As we said before you can use this version "
+"TOGETHER with the AR one, depending on your use\n"
+"        case!"
 msgstr ""
 
 #: mymwebsite/templates/faq.html:7
@@ -841,11 +881,6 @@ msgstr ""
 #: mymwebsite/templates/index.html:30 mymwebsite/templates/index.html:77
 #: mymwebsite/templates/innerbase.html:66
 msgid "Cases"
-msgstr ""
-
-#: mymwebsite/templates/index.html:42 mymwebsite/templates/index.html:89
-#: mymwebsite/templates/innerbase.html:70
-msgid "Download"
 msgstr ""
 
 #: mymwebsite/templates/index.html:46 mymwebsite/templates/index.html:93
