--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-08-09 20:09+0100\n"
+"POT-Creation-Date: 2017-08-16 15:15+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -973,7 +973,7 @@ msgid "Simplified Sharing"
 msgstr ""
 
 #: mymwebsite/templates/index.html:183
-msgid " Share captures automatically via Facebook, Twitter and Email."
+msgid " Share captures automatically via Twitter and Email."
 msgstr ""
 
 #: mymwebsite/templates/index.html:184
