--- a/locale/pt/LC_MESSAGES/django.po
+++ b/locale/pt/LC_MESSAGES/django.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-08-09 20:09+0100\n"
-"PO-Revision-Date: 2017-08-09 20:13+0100\n"
+"POT-Creation-Date: 2017-08-16 15:15+0100\n"
+"PO-Revision-Date: 2017-08-16 15:16+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: pt\n"
@@ -1235,9 +1235,8 @@ msgid "Simplified Sharing"
 msgstr "Partilhamento Simplificado"
 
 #: mymwebsite/templates/index.html:183
-msgid " Share captures automatically via Facebook, Twitter and Email."
-msgstr ""
-" Partilhe suas capturas automaticamente via Facebook, Twitter e E-mail."
+msgid " Share captures automatically via Twitter and Email."
+msgstr " Partilhe suas capturas automaticamente via Twitter e E-mail."
 
 #: mymwebsite/templates/index.html:184
 msgid ""
