--- a/locale/pt/LC_MESSAGES/django.po
+++ b/locale/pt/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2017-09-18 20:38+0100\n"
+"POT-Creation-Date: 2017-09-18 20:57+0100\n"
 "PO-Revision-Date: 2017-09-10 11:38+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -73,7 +73,7 @@ msgid "Set"
 msgstr "Definir"
 
 #: mymwebsite/templates/cases.html:10
-msgid "Generic Use for the MyMensor Media Plan"
+msgid "General Purpose Use for the MyMensor Media Plan"
 msgstr ""
 
 #: mymwebsite/templates/cases.html:11
@@ -85,7 +85,7 @@ msgstr ""
 
 #: mymwebsite/templates/cases.html:12
 msgid ""
-"At that time, it seemed to be a good question, but as time passes it becomes "
+"At that time, it seemed to be a good question, but as time passes it became "
 "abundantly clear that forgery in the online world has become epidemic. So, "
 "seeing a photo or video that was sent to you in the usual channels is not "
 "enough anymore, you need proof!"
@@ -107,7 +107,7 @@ msgstr ""
 
 #: mymwebsite/templates/cases.html:15
 msgid ""
-"This what I call a generic, simple use to MyMensor Media: media "
+"This what I call a general, simple use to MyMensor Media: media "
 "certification."
 msgstr ""
 
